Bugfix: Firefox Shake Invite Button Layout (#1323)
This PR fixes a bug where the "Invite a New Member" form on the Shake
page had a misaligned submit button.

Fixes #1320
Fixes #979

--- a/src/legacy/components/sidebar/_sidebar.scss
+++ b/src/legacy/components/sidebar/_sidebar.scss
@@ -267,6 +267,7 @@
     border: 0;
     border-radius: var(--size-border-radius-default);
     flex: 1;
+    width: 100%;
   }
 
   .invite-button {
